--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -31,16 +31,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="BatchCollection.cs" />
+    <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="EnumerableUtilities.cs" />
+    <Compile Include="EventArgs.cs" />
+    <Compile Include="Graphs\GraphTraverser.cs" />
+    <Compile Include="Graphs\IGraph.cs" />
+    <Compile Include="IMapping.cs" />
+    <Compile Include="IMulti.cs" />
+    <Compile Include="Mapping.cs" />
+    <Compile Include="MathExtensions.cs" />
+    <Compile Include="MathUtilities.cs" />
+    <Compile Include="Multi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Range.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
