--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -32,20 +32,46 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BatchCollection.cs" />
+    <Compile Include="Breaker.cs" />
     <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="ColorGenerator.cs" />
+    <Compile Include="ColorPlus.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EnumerableUtilities.cs" />
     <Compile Include="EventArgs.cs" />
+    <Compile Include="EventsArgs.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
+    <Compile Include="Extensions\DoubleExtensions.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\QueueExtensions.cs" />
+    <Compile Include="Extensions\RandomExtensions.cs" />
+    <Compile Include="Extensions\RangeExtensions.cs" />
+    <Compile Include="Extensions\RectangleExtensions.cs" />
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="IMapping.cs" />
     <Compile Include="IMulti.cs" />
+    <Compile Include="LinearMapping.cs" />
     <Compile Include="Mapping.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
     <Compile Include="Multi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
+    <Compile Include="SearchList.cs" />
+    <Compile Include="Utilities\ColorUtility.cs" />
+    <Compile Include="Utilities\ConsoleUtility.cs" />
+    <Compile Include="Utilities\DoubleUtility.cs" />
+    <Compile Include="Utilities\EnumerableUtility.cs" />
+    <Compile Include="Utilities\RectangleUtility.cs" />
+    <Compile Include="Utilities\ThreadUtility.cs" />
+    <Compile Include="XSerializable.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
