--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -34,8 +34,10 @@
     <Compile Include="BatchCollection.cs" />
     <Compile Include="Breaker.cs" />
     <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="Color.cs" />
     <Compile Include="ColorGenerator.cs" />
     <Compile Include="ColorPlus.cs" />
+    <Compile Include="Colors.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EnumerableUtilities.cs" />
     <Compile Include="EventArgs.cs" />
@@ -55,9 +57,12 @@
     <Compile Include="Mapping.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
+    <Compile Include="Matrix22Float.cs" />
     <Compile Include="Multi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
+    <Compile Include="RectangleFloat.cs" />
+    <Compile Include="RectangleFloatMapping.cs" />
     <Compile Include="SearchList.cs" />
     <Compile Include="Utilities\ColorUtility.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
@@ -65,6 +70,8 @@
     <Compile Include="Utilities\EnumerableUtility.cs" />
     <Compile Include="Utilities\RectangleUtility.cs" />
     <Compile Include="Utilities\ThreadUtility.cs" />
+    <Compile Include="Vector2Float.cs" />
+    <Compile Include="Vector2Int.cs" />
     <Compile Include="XSerializable.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +79,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Math\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
