Improved map design.

--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -34,14 +34,13 @@
     <Compile Include="BatchCollection.cs" />
     <Compile Include="Breaker.cs" />
     <Compile Include="CollectionExtensions.cs" />
-    <Compile Include="Color.cs" />
-    <Compile Include="ColorGenerator.cs" />
-    <Compile Include="ColorPlus.cs" />
-    <Compile Include="Colors.cs" />
+    <Compile Include="Graphics\Color.cs" />
+    <Compile Include="Graphics\ColorGenerator.cs" />
+    <Compile Include="Graphics\ColorPlus.cs" />
+    <Compile Include="Graphics\Colors.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="EnumerableUtilities.cs" />
     <Compile Include="EventArgs.cs" />
-    <Compile Include="EventsArgs.cs" />
     <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\ComparableExtensions.cs" />
     <Compile Include="Extensions\DoubleExtensions.cs" />
@@ -52,17 +51,18 @@
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Mathematics\Maps\IMap.cs" />
-    <Compile Include="IMulti.cs" />
     <Compile Include="Mathematics\Maps\Linear\MapDouble.cs" />
     <Compile Include="Mathematics\Maps\Linear\MapFloat.cs" />
+    <Compile Include="Mathematics\Maps\Linear\MapVector2Float.cs" />
+    <Compile Include="Mathematics\Maps\MapRange.cs" />
+    <Compile Include="Mathematics\Maps\MapRectangleFloat.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
     <Compile Include="Mathematics\Matrix22Float.cs" />
-    <Compile Include="Multi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mathematics\Range.cs" />
     <Compile Include="Mathematics\RectangleFloat.cs" />
-    <Compile Include="Mathematics\Maps\Linear\MapRectangleFloat.cs" />
+    <Compile Include="Mathematics\Maps\MapVector2Float.cs" />
     <Compile Include="SearchList.cs" />
     <Compile Include="Utilities\ColorUtility.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
