--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -52,18 +52,18 @@
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Mathematics\Maps\IMap.cs" />
-    <Compile Include="Mathematics\Maps\Linear\MapDouble.cs" />
-    <Compile Include="Mathematics\Maps\Linear\MapFloat.cs" />
+    <Compile Include="Mathematics\Maps\Linear\DoubleMap.cs" />
+    <Compile Include="Mathematics\Maps\Linear\FloatMap.cs" />
     <Compile Include="Mathematics\Maps\Linear\RectangleMap.cs" />
-    <Compile Include="Mathematics\Maps\MapRange.cs" />
-    <Compile Include="Mathematics\Maps\MapRectangleFloat.cs" />
+    <Compile Include="Mathematics\Maps\RangeMap.cs" />
+    <Compile Include="Mathematics\Maps\RectangleFloatMap.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
     <Compile Include="Mathematics\Matrix22Float.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mathematics\Range.cs" />
     <Compile Include="Mathematics\RectangleFloat.cs" />
-    <Compile Include="Mathematics\Maps\MapVector2Float.cs" />
+    <Compile Include="Mathematics\Maps\Vector2FloatMap.cs" />
     <Compile Include="SearchList.cs" />
     <Compile Include="Utilities\ColorUtility.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
