--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -51,28 +51,27 @@
     <Compile Include="Graphics\RgbColor.cs" />
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
-    <Compile Include="Mathematics\Maps\IMap.cs" />
-    <Compile Include="Mathematics\Maps\Linear\DoubleMap.cs" />
-    <Compile Include="Mathematics\Maps\Linear\FloatMap.cs" />
-    <Compile Include="Mathematics\Maps\Linear\RectangleMap.cs" />
-    <Compile Include="Mathematics\Maps\RangeMap.cs" />
-    <Compile Include="Mathematics\Maps\RectangleFloatMap.cs" />
+    <Compile Include="Maps\IMap.cs" />
+    <Compile Include="Maps\Linear\DoubleMap.cs" />
+    <Compile Include="Maps\Linear\FloatMap.cs" />
+    <Compile Include="Maps\Linear\RectangleMap.cs" />
+    <Compile Include="Maps\RangeMap.cs" />
+    <Compile Include="Maps\RectangleFloatMap.cs" />
+    <Compile Include="Maps\Vector2FloatMap.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
-    <Compile Include="Mathematics\Matrix22Float.cs" />
+    <Compile Include="Matrix22Float.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Mathematics\Range.cs" />
-    <Compile Include="Mathematics\RectangleFloat.cs" />
-    <Compile Include="Mathematics\Maps\Vector2FloatMap.cs" />
+    <Compile Include="Range.cs" />
+    <Compile Include="RectangleFloat.cs" />
     <Compile Include="SearchList.cs" />
-    <Compile Include="Utilities\ColorUtility.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
     <Compile Include="Utilities\DoubleUtility.cs" />
     <Compile Include="Utilities\EnumerableUtility.cs" />
     <Compile Include="Utilities\RectangleUtility.cs" />
     <Compile Include="Utilities\ThreadUtility.cs" />
-    <Compile Include="Mathematics\Vector2Float.cs" />
-    <Compile Include="Mathematics\Vector2Int.cs" />
+    <Compile Include="Vector2Float.cs" />
+    <Compile Include="Vector2Int.cs" />
     <Compile Include="XSerializable.cs" />
   </ItemGroup>
   <ItemGroup>
