--- a/Source/Edge/Edge.csproj
+++ b/Source/Edge/Edge.csproj
@@ -34,6 +34,9 @@
     <Compile Include="BatchCollection.cs" />
     <Compile Include="Breaker.cs" />
     <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="Range2Double.cs" />
+    <Compile Include="Range.cs" />
+    <Compile Include="Vector1Double.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\ColorGenerator.cs" />
     <Compile Include="Graphics\Colors.cs" />
@@ -52,25 +55,23 @@
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Maps\IMap.cs" />
-    <Compile Include="Maps\Linear\DoubleMap.cs" />
-    <Compile Include="Maps\Linear\FloatMap.cs" />
-    <Compile Include="Maps\Linear\RectangleMap.cs" />
+    <Compile Include="Maps\Linear\MapDouble.cs" />
+    <Compile Include="Maps\Linear\MapRectangle.cs" />
     <Compile Include="Maps\RangeMap.cs" />
-    <Compile Include="Maps\RectangleFloatMap.cs" />
-    <Compile Include="Maps\Vector2FloatMap.cs" />
+    <Compile Include="Maps\RectangleDoubleMap.cs" />
+    <Compile Include="Maps\Vector2DoubleMap.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
-    <Compile Include="Matrix22Float.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range.cs" />
-    <Compile Include="RectangleFloat.cs" />
+    <Compile Include="Range1Double.cs" />
+    <Compile Include="RectangleDouble.cs" />
     <Compile Include="SearchList.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
     <Compile Include="Utilities\DoubleUtility.cs" />
     <Compile Include="Utilities\EnumerableUtility.cs" />
     <Compile Include="Utilities\RectangleUtility.cs" />
     <Compile Include="Utilities\ThreadUtility.cs" />
-    <Compile Include="Vector2Float.cs" />
+    <Compile Include="Vector2Double.cs" />
     <Compile Include="Vector2Int.cs" />
     <Compile Include="XSerializable.cs" />
   </ItemGroup>
