--- a/Source/Dash/Dash.csproj
+++ b/Source/Dash/Dash.csproj
@@ -33,14 +33,53 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BatchCollection.cs" />
+    <Compile Include="Breaker.cs" />
+    <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="EnumerableUtilities.cs" />
+    <Compile Include="EventArgs.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
+    <Compile Include="Extensions\ComparableExtensions.cs" />
+    <Compile Include="Extensions\DoubleExtensions.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\QueueExtensions.cs" />
+    <Compile Include="Extensions\RandomExtensions.cs" />
+    <Compile Include="Extensions\RectangleExtensions.cs" />
+    <Compile Include="Graphics\Color.cs" />
+    <Compile Include="Graphics\ColorGenerator.cs" />
+    <Compile Include="Graphics\Colors.cs" />
+    <Compile Include="Graphics\HsvColor.cs" />
+    <Compile Include="Graphics\RgbColor.cs" />
+    <Compile Include="Graphs\GraphTraverser.cs" />
+    <Compile Include="Graphs\IGraph.cs" />
+    <Compile Include="Maps\IMap.cs" />
+    <Compile Include="Maps\Linear\MapDouble.cs" />
+    <Compile Include="Maps\Linear\MapRectangle.cs" />
+    <Compile Include="Maps\RangeMap.cs" />
+    <Compile Include="Maps\RectangleDoubleMap.cs" />
+    <Compile Include="Maps\Vector2DoubleMap.cs" />
+    <Compile Include="MathExtensions.cs" />
+    <Compile Include="MathUtilities.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Range.cs" />
+    <Compile Include="Range1Double.cs" />
+    <Compile Include="Range2Double.cs" />
+    <Compile Include="RangeExtensions.cs" />
+    <Compile Include="RectangleDouble.cs" />
+    <Compile Include="SearchList.cs" />
+    <Compile Include="Utilities\ConsoleUtility.cs" />
+    <Compile Include="Utilities\DoubleUtility.cs" />
+    <Compile Include="Utilities\EnumerableUtility.cs" />
+    <Compile Include="Utilities\RectangleUtility.cs" />
+    <Compile Include="Utilities\ThreadUtility.cs" />
+    <Compile Include="Vector1Double.cs" />
+    <Compile Include="Vector2Double.cs" />
+    <Compile Include="Vector2Int.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
