--- a/Source/Dash/Dash.csproj
+++ b/Source/Dash/Dash.csproj
@@ -66,10 +66,10 @@
     <Compile Include="MathUtilities.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Range.cs" />
-    <Compile Include="Range1Double.cs" />
-    <Compile Include="Range2Double.cs" />
-    <Compile Include="RangeExtensions.cs" />
+    <Compile Include="Basic\Range.cs" />
+    <Compile Include="Basic\Range1Double.cs" />
+    <Compile Include="Basic\Range2Double.cs" />
+    <Compile Include="Basic\RangeExtensions.cs" />
     <Compile Include="RectangleDouble.cs" />
     <Compile Include="SearchList.cs" />
     <Compile Include="Utilities\ConsoleUtility.cs" />
@@ -77,8 +77,8 @@
     <Compile Include="Utilities\EnumerableUtility.cs" />
     <Compile Include="Utilities\RectangleUtility.cs" />
     <Compile Include="Utilities\ThreadUtility.cs" />
-    <Compile Include="Vector1Double.cs" />
-    <Compile Include="Vector2Double.cs" />
+    <Compile Include="Basic\Vector1Double.cs" />
+    <Compile Include="Basic\Vector2Double.cs" />
     <Compile Include="Vector2Int.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
