Improved more basic stuff.

--- a/Source/Dash/Dash.csproj
+++ b/Source/Dash/Dash.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Maps\Vector2DoubleMap.cs" />
     <Compile Include="MathExtensions.cs" />
     <Compile Include="MathUtilities.cs" />
-    <Compile Include="Matrix.cs" />
+    <Compile Include="Basic\Matrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Basic\Range.cs" />
     <Compile Include="Basic\Range1Double.cs" />
@@ -79,7 +79,6 @@
     <Compile Include="Utilities\ThreadUtility.cs" />
     <Compile Include="Basic\Vector1Double.cs" />
     <Compile Include="Basic\Vector2Double.cs" />
-    <Compile Include="Vector2Int.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
