--- a/Source/Dash/Dash.csproj
+++ b/Source/Dash/Dash.csproj
@@ -39,16 +39,16 @@
     <Compile Include="BatchCollection.cs" />
     <Compile Include="Breaker.cs" />
     <Compile Include="CollectionExtensions.cs" />
-    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="EnumerableExtensions_.cs" />
     <Compile Include="EnumerableUtilities.cs" />
     <Compile Include="EventArgs.cs" />
-    <Compile Include="Extensions\ColorExtensions.cs" />
-    <Compile Include="Extensions\ComparableExtensions.cs" />
-    <Compile Include="Extensions\DoubleExtensions.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Extensions\QueueExtensions.cs" />
-    <Compile Include="Extensions\RandomExtensions.cs" />
-    <Compile Include="Extensions\RectangleExtensions.cs" />
+    <Compile Include="ColorExtensions.cs" />
+    <Compile Include="ComparableExtensions.cs" />
+    <Compile Include="DoubleExtensions.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
+    <Compile Include="QueueExtensions.cs" />
+    <Compile Include="RandomExtensions.cs" />
+    <Compile Include="RectangleExtensions.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\ColorGenerator.cs" />
     <Compile Include="Graphics\Colors.cs" />
@@ -72,11 +72,11 @@
     <Compile Include="Basic\Range2Double.cs" />
     <Compile Include="Basic\RangeExtensions.cs" />
     <Compile Include="SearchList.cs" />
-    <Compile Include="Utilities\ConsoleUtility.cs" />
-    <Compile Include="Utilities\DoubleUtility.cs" />
-    <Compile Include="Utilities\EnumerableUtility.cs" />
-    <Compile Include="Utilities\RectangleUtility.cs" />
-    <Compile Include="Utilities\ThreadUtility.cs" />
+    <Compile Include="ConsoleUtility.cs" />
+    <Compile Include="DoubleUtility.cs" />
+    <Compile Include="EnumerableUtility.cs" />
+    <Compile Include="RectangleUtility.cs" />
+    <Compile Include="ThreadUtility.cs" />
     <Compile Include="Basic\Vector1Double.cs" />
     <Compile Include="Basic\Vector2Double.cs" />
   </ItemGroup>
