--- a/Source/Dash/Dash.csproj
+++ b/Source/Dash/Dash.csproj
@@ -37,14 +37,13 @@
   <ItemGroup>
     <Compile Include="BatchCollection.cs" />
     <Compile Include="Breaker.cs" />
-    <Compile Include="Extensions\CollectionExtensions.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Extensions\EnumerableUtilities.cs" />
+    <Compile Include="Extensions\Collections.cs" />
+    <Compile Include="Extensions\Enumerables.cs" />
     <Compile Include="EventArgs.cs" />
-    <Compile Include="Extensions\ComparableExtensions.cs" />
-    <Compile Include="Extensions\QueueExtensions.cs" />
-    <Compile Include="Extensions\RandomExtensions.cs" />
-    <Compile Include="Extensions\Scalar.cs" />
+    <Compile Include="Extensions\Comparables.cs" />
+    <Compile Include="Extensions\Items.cs" />
+    <Compile Include="Extensions\Queues.cs" />
+    <Compile Include="Extensions\Scalars.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\ColorGenerator.cs" />
     <Compile Include="Graphics\Colors.cs" />
@@ -65,10 +64,9 @@
     <Compile Include="Basic\Range1Double.cs" />
     <Compile Include="Basic\Range2Double.cs" />
     <Compile Include="Extensions\RangeExtensions.cs" />
-    <Compile Include="Random2.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="SearchList.cs" />
-    <Compile Include="Extensions\ConsoleUtility.cs" />
-    <Compile Include="Extensions\EnumerableUtility.cs" />
+    <Compile Include="Extensions\Consoles.cs" />
     <Compile Include="Extensions\ThreadUtility.cs" />
     <Compile Include="Basic\Vector1Double.cs" />
     <Compile Include="Basic\Vector2Double.cs" />
