--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -33,14 +33,42 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basics\Matrix.cs" />
+    <Compile Include="Basics\Range.cs" />
+    <Compile Include="Basics\Range1Double.cs" />
+    <Compile Include="Basics\Range2Double.cs" />
+    <Compile Include="Basics\Vector1Double.cs" />
+    <Compile Include="Basics\Vector2Double.cs" />
+    <Compile Include="Collections\BatchCollection.cs" />
+    <Compile Include="Collections\SearchList.cs" />
+    <Compile Include="EventArgs.cs" />
+    <Compile Include="Extensions\Collections.cs" />
+    <Compile Include="Extensions\Comparables.cs" />
+    <Compile Include="Extensions\Enumerables.cs" />
+    <Compile Include="Extensions\Items.cs" />
+    <Compile Include="Extensions\Queues.cs" />
+    <Compile Include="Extensions\Ranges.cs" />
+    <Compile Include="Extensions\Scalars.cs" />
+    <Compile Include="Extensions\Terminal.cs" />
+    <Compile Include="Graphics\Color.cs" />
+    <Compile Include="Graphics\ColorGenerator.cs" />
+    <Compile Include="Graphics\Colors.cs" />
+    <Compile Include="Graphics\HsvColor.cs" />
+    <Compile Include="Graphics\RgbColor.cs" />
+    <Compile Include="Graphs\GraphTraverser.cs" />
+    <Compile Include="Graphs\IGraph.cs" />
+    <Compile Include="Maps\IMap.cs" />
+    <Compile Include="Maps\Linear\MapDouble.cs" />
+    <Compile Include="Maps\Linear\Range1DoubleMap.cs" />
+    <Compile Include="Maps\Linear\Range2DoubleMap.cs" />
+    <Compile Include="Maps\MapRange.cs" />
+    <Compile Include="Maps\MapVector1Double.cs" />
+    <Compile Include="Maps\MapVector2Double.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
+    <Compile Include="Threading\Breaker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
