--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -35,14 +35,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Basics\Range1Integer.cs" />
-    <Compile Include="Basics\Range2Integer.cs" />
+    <Compile Include="Basics\Volume1Integer.cs" />
+    <Compile Include="Basics\Volume2Integer.cs" />
     <Compile Include="Basics\Vector1Integer.cs" />
     <Compile Include="Basics\Vector2Integer.cs" />
     <Compile Include="Basics\Matrix.cs" />
     <Compile Include="Basics\Range.cs" />
-    <Compile Include="Basics\Range1Double.cs" />
-    <Compile Include="Basics\Range2Double.cs" />
+    <Compile Include="Basics\Volume1Double.cs" />
+    <Compile Include="Basics\Volume2Double.cs" />
     <Compile Include="Basics\Vector1Double.cs" />
     <Compile Include="Basics\Vector2Double.cs" />
     <Compile Include="Collections\BatchCollection.cs" />
