--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -64,12 +64,19 @@
     <Compile Include="Graphics\RgbColor.cs" />
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
+    <Compile Include="Maps\Linear\Mapper.cs" />
+    <Compile Include="Maps\Scalars\RangeMap.cs" />
+    <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Vector1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\SymmetricVolume2DoubleMap.cs" />
+    <Compile Include="Maps\SymmetricMap.cs" />
+    <Compile Include="Maps\ISymmetricMap.cs" />
     <Compile Include="Maps\IMap.cs" />
-    <Compile Include="Maps\Linear\MapDouble.cs" />
-    <Compile Include="Maps\Linear\Volume1DoubleMap.cs" />
-    <Compile Include="Maps\Linear\Volume2DoubleMap.cs" />
-    <Compile Include="Maps\MapVector1Double.cs" />
-    <Compile Include="Maps\MapVector2Double.cs" />
+    <Compile Include="Maps\Scalars\SymmetricRangeMap.cs" />
+    <Compile Include="Maps\Scalars\DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Volume1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Volume2DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Vector2DoubleMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="Threading\Breaker.cs" />
