--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -51,6 +51,7 @@
     <Compile Include="EventArgs.cs" />
     <Compile Include="Extensions\Collections.cs" />
     <Compile Include="Extensions\Comparables.cs" />
+    <Compile Include="Extensions\Dictionaries.cs" />
     <Compile Include="Extensions\Enumerables.cs" />
     <Compile Include="Extensions\Items.cs" />
     <Compile Include="Extensions\Maps.cs" />
