--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -69,7 +69,8 @@
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Collections\IFixedList.cs" />
     <Compile Include="Maps\InstantMap.cs" />
-    <Compile Include="Maps\Linear\Mapper.cs" />
+    <Compile Include="Maps\Mappers\CosineMap.cs" />
+    <Compile Include="Maps\Mappers\LinearMap.cs" />
     <Compile Include="Maps\Scalars\RangeMap.cs" />
     <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs" />
     <Compile Include="Maps\Vectors\Vector1DoubleMap.cs" />
