Improved Map design. Added Factory.

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Collections\BatchCollection.cs" />
     <Compile Include="Collections\FixedList.cs" />
     <Compile Include="Collections\SearchList.cs" />
+    <Compile Include="Design\Factory.cs" />
+    <Compile Include="Design\IFactory.cs" />
     <Compile Include="Delegates.cs" />
     <Compile Include="EventArgs.cs" />
     <Compile Include="Extensions\Collections.cs" />
@@ -68,16 +70,15 @@
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Collections\IFixedList.cs" />
+    <Compile Include="Maps\Abstract\IBounded.cs" />
     <Compile Include="Maps\Basic\CosineMap.cs" />
     <Compile Include="Maps\Basic\LinearMap.cs" />
-    <Compile Include="Maps\InstantMapper.cs" />
     <Compile Include="Maps\Mappers.cs" />
-    <Compile Include="Maps\IMapper.cs" />
     <Compile Include="Maps\InstantMap.cs" />
     <Compile Include="Maps\Scalars\RangeMap.cs" />
     <Compile Include="Maps\SymmetricMap.cs" />
-    <Compile Include="Maps\ISymmetricMap.cs" />
-    <Compile Include="Maps\IMap.cs" />
+    <Compile Include="Maps\Abstract\ISymmetricMap.cs" />
+    <Compile Include="Maps\Abstract\IMap.cs" />
     <Compile Include="Maps\Scalars\SymmetricRangeMap.cs" />
     <Compile Include="Maps\Scalars\DoubleMap.cs" />
     <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs">
