--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Extensions\Ranges.cs" />
     <Compile Include="Extensions\Scalars.cs" />
     <Compile Include="Extensions\Terminal.cs" />
+    <Compile Include="Fourier\DiscreteCosineTransformer.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\ColorGenerator.cs" />
     <Compile Include="Graphics\Colors.cs" />
