--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -62,7 +62,8 @@
     <Compile Include="Extensions\Ranges.cs" />
     <Compile Include="Extensions\Scalars.cs" />
     <Compile Include="Extensions\Terminal.cs" />
-    <Compile Include="Fourier\DiscreteCosineTransformer.cs" />
+    <Compile Include="Fourier\DiscreteFourierTransform.cs" />
+    <Compile Include="Fourier\DiscreteCosineTransform.cs" />
     <Compile Include="Graphics\Color.cs" />
     <Compile Include="Graphics\ColorGenerator.cs" />
     <Compile Include="Graphics\Colors.cs" />
