--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basics\Complex.cs" />
+    <Compile Include="Basics\MatrixComplex.cs" />
     <Compile Include="Basics\Volume1Integer.cs" />
     <Compile Include="Basics\Volume2Integer.cs" />
     <Compile Include="Basics\Vector1Integer.cs" />
