--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -82,12 +82,6 @@
     <Compile Include="Graphs\GraphTraverser.cs" />
     <Compile Include="Graphs\IGraph.cs" />
     <Compile Include="Collections\IFixedList.cs" />
-    <Compile Include="MachineLearning\GameAI.cs" />
-    <Compile Include="MachineLearning\IGameAction.cs" />
-    <Compile Include="MachineLearning\IGameState.cs" />
-    <Compile Include="MachineLearning\ILearner.cs" />
-    <Compile Include="MachineLearning\SimpleGameAI.cs" />
-    <Compile Include="MachineLearning\SvmLearner.cs" />
     <Compile Include="Maps\Abstract\IBounded.cs" />
     <Compile Include="Maps\Basic\CosineMap.cs" />
     <Compile Include="Maps\Basic\LinearMap.cs" />
@@ -99,24 +93,12 @@
     <Compile Include="Maps\Abstract\IMap.cs" />
     <Compile Include="Maps\Scalars\SymmetricRangeMap.cs" />
     <Compile Include="Maps\Scalars\DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Maps\Vectors\SymmetricVolume2DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Maps\Vectors\Vector1DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Maps\Vectors\Vector2DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Maps\Vectors\Volume1DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Maps\Vectors\Volume2DoubleMap.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\SymmetricVolume2DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Vector1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Vector2DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Volume1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Volume2DoubleMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="Threading\Breaker.cs" />
