--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="Threading\Breaker.cs" />
+    <Compile Include="Collections\Bijection.cs" />
+    <Compile Include="Collections\DictionaryMap.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
