--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -87,12 +87,8 @@
     <Compile Include="Maps\Abstract\IMap.cs" />
     <Compile Include="Maps\Scalars\SymmetricRangeMap.cs" />
     <Compile Include="Maps\Scalars\DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\SymmetricVolume1DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\SymmetricVolume2DoubleMap.cs" />
     <Compile Include="Maps\Vectors\Vector1DoubleMap.cs" />
     <Compile Include="Maps\Vectors\Vector2DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Volume1DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Volume2DoubleMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="Threading\Breaker.cs" />
@@ -102,6 +98,10 @@
     <Compile Include="Basics\Orthotope1Integer.cs" />
     <Compile Include="Basics\Orthotope2Double.cs" />
     <Compile Include="Basics\Orthotope2Integer.cs" />
+    <Compile Include="Maps\Vectors\SymmetricOrthotope2DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\SymmetricOrthotope1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Orthotope1DoubleMap.cs" />
+    <Compile Include="Maps\Vectors\Orthotope2DoubleMap.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
