--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Extensions\Ranges.cs" />
     <Compile Include="Extensions\Scalars.cs" />
     <Compile Include="Extensions\Streams.cs" />
+    <Compile Include="Extensions\Strings.cs" />
     <Compile Include="Extensions\Terminal.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioFile.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioFrame.cs" />
