Some cleanup, add Xing tag parsing.

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Extensions\Streams.cs" />
     <Compile Include="Extensions\Strings.cs" />
     <Compile Include="Extensions\Terminal.cs" />
+    <Compile Include="Formats\Mpeg\MpegAudioXingFrame.cs" />
+    <Compile Include="Formats\Mpeg\MpegAudioDataFrame.cs" />
+    <Compile Include="Formats\Mpeg\MpegAudioSpecification.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioFile.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioFrame.cs" />
     <Compile Include="Formats\Riff\RiffDataChunk.cs" />
