--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Design\Factory.cs" />
     <Compile Include="Design\IFactory.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="Extensions\Binary.cs" />
     <Compile Include="Extensions\Collections.cs" />
     <Compile Include="Extensions\Comparables.cs" />
     <Compile Include="Extensions\Enumerations.cs" />
