--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Formats\Riff\RiffChunk.cs" />
     <Compile Include="Formats\Riff\RiffWaveChunk.cs" />
     <Compile Include="Formats\Tags\Id3v1\Id3v1Tag.cs" />
+    <Compile Include="Formats\Tags\Id3v2\Id3v2ImageFrame.cs" />
     <Compile Include="Formats\Tags\Id3v2\Id3v2UserTextFrame.cs" />
     <Compile Include="Formats\Tags\Id3v2\Id3v2Frame.cs">
       <SubType>Code</SubType>
