--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -74,17 +74,17 @@
     <Compile Include="Formats\Riff\RiffFormatChunk.cs" />
     <Compile Include="Formats\Riff\RiffChunk.cs" />
     <Compile Include="Formats\Riff\RiffWaveChunk.cs" />
-    <Compile Include="Formats\Tags\Id3v1\Id3v1Tag.cs" />
-    <Compile Include="Formats\Tags\Id3v2\Id3v2ImageFrame.cs" />
-    <Compile Include="Formats\Tags\Id3v2\Id3v2UserTextFrame.cs" />
-    <Compile Include="Formats\Tags\Id3v2\Id3v2Frame.cs">
+    <Compile Include="Formats\Tags\ID3v1\ID3v1Tag.cs" />
+    <Compile Include="Formats\Tags\ID3v2\ID3v2ImageFrame.cs" />
+    <Compile Include="Formats\Tags\ID3v2\ID3v2UserTextFrame.cs" />
+    <Compile Include="Formats\Tags\ID3v2\ID3v2Frame.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Formats\Tags\Id3v2\Id3v2GenericFrame.cs" />
-    <Compile Include="Formats\Tags\Id3v2\Id3v2Tag.cs">
+    <Compile Include="Formats\Tags\ID3v2\ID3v2GenericFrame.cs" />
+    <Compile Include="Formats\Tags\ID3v2\ID3v2Tag.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Formats\Tags\Id3v2\Id3v2TextFrame.cs" />
+    <Compile Include="Formats\Tags\ID3v2\ID3v2TextFrame.cs" />
     <Compile Include="SignalProcessing\Wave.cs" />
     <Compile Include="SignalProcessing\DiscreteFourierTransform.cs" />
     <Compile Include="SignalProcessing\SpectralAnalysis.cs" />
